connection update add checks

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-db.username=postgres
-db.password=2004
-db.jdbc=jdbc:postgresql://localhost:5432/test
+generic.username=postgres
+generic.password=2004
+generic.host=localhost:5432
+generic.database=test
